Updated Navigation Bar
1. Added Like Website
2. Support and Contact buttons
3. On a navigation button click, the nav bar closes

--- a/style.css
+++ b/style.css
@@ -468,12 +468,12 @@ html {
   flex-grow: 1;
 }
 
-.user-name {
+#user-name {
   font-size: 18px;
   font-weight: bold;
 }
 
-.user-level {
+#user-level {
   font-size: 14px;
 }
 
