--- a/style.css
+++ b/style.css
@@ -435,6 +435,8 @@ html {
   right: -100%;
   width: 300px;
   height: 100%;
+  overflow-y: scroll;
+  scrollbar-color: linear-gradient(45deg, #001908, #0f0, #001908);
   background: var(--darkGreen);
   color: #fff;
   display: flex;
