--- a/style.css
+++ b/style.css
@@ -229,6 +229,7 @@ html {
 }
 .helper {
   font-size: 1rem;
+  display: none;
 }
 
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Old Navigation Menu <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
