Quest: Updated Functionality
1. Incorporated a help message to explain HQ quests
2. Gave an ID to quests title so that style css can access it

--- a/style.css
+++ b/style.css
@@ -1039,6 +1039,10 @@ h1 span {
   align-content: center;
   place-items: center;
 }
+#checkConTitle {
+  color: white;
+  cursor: help;
+}
 #checklist {
   --background: #00000065;
   --text: #fff;
