--- a/style.css
+++ b/style.css
@@ -523,7 +523,7 @@ html {
   margin-right: 10px;
 }
 
-.nav-links a {
+.nav-links x {
   text-decoration: none;
   font-size: 16px;
 }
@@ -2395,13 +2395,15 @@ h6 {
   margin: 5px 0;
 }
 
-.footer-column ul li a {
+.footer-column ul li a,
+.footer-column ul li x {
   color: #fff;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
-.footer-column ul li a:hover {
+.footer-column ul li a:hover,
+.footer-column ul li x:hover {
   color: var(--brightGreen);
 }
 
