--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@
 @font-face {
   font-family: 'Pixelify Sans';
   src: url('PixelifySans.woff2') format('truetype');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Quantico';
   src: url('Quantico-Regular.woff2') format('truetype');
+  font-display: swap;
 }
 * {
   margin: 0;
@@ -578,10 +580,11 @@ html {
   height: 500px;
   font-size: var(--fontSize);
   cursor: pointer;
-  background: var(--darkGreen);
+  border: 1px solid var(--grey);
+  border-left: 5px solid var(--grey);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background: var(--black);
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
   color: var(--white);
   display: flex;
@@ -596,7 +599,7 @@ html {
 
 .social-post-image {
   width: 100%;
-  height: 180px;
+  height: 200px;
   border-radius: 10px;
   object-fit: cover;
 }
