--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 /** @format */
-/* Fonts down below */
 @font-face {
   font-family: 'Pixelify Sans';
-  src: url('PixelifySans.woff2') format('truetype');
+  src: url('PixelifySans.woff2') format('woff2');
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Quantico';
-  src: url('Quantico-Regular.woff2') format('truetype');
+  src: url('Quantico-Regular.woff2') format('woff2');
   font-display: swap;
 }
+
 * {
   margin: 0;
   padding: 0;
